--- a/demo/res/layout/demo.xml
+++ b/demo/res/layout/demo.xml
@@ -4,27 +4,46 @@
     android:layout_height="fill_parent">
     <LinearLayout android:layout_height="wrap_content"
         android:layout_width="fill_parent" android:orientation="horizontal"
-        android:padding="4dip">
-        <EditText android:id="@+id/appspot_base"
-            android:layout_height="wrap_content" android:layout_width="wrap_content"
-            android:layout_marginRight="4dip" android:singleLine="true"
-            android:layout_weight="1" android:hint="@string/appengine_instance_name"
-            android:nextFocusDown="@id/android:list" />
+        android:paddingLeft="4dip" android:gravity="center"
+        android:background="@color/appspot_panel_background"
+        android:paddingTop="4dip" android:paddingBottom="4dip">
+        <TextView android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:textStyle="bold"
+            android:gravity="center_vertical" android:id="@+id/appspot_base"
+            android:text="@string/default_appspot_base"
+            android:textColor="@color/appspot_base"></TextView>
         <TextView android:text=".appspot.com"
-            android:textStyle="bold" android:layout_height="wrap_content"
-            android:layout_width="wrap_content"></TextView>
+            android:layout_height="wrap_content" android:layout_width="wrap_content"
+            android:layout_weight="1"></TextView>
+        <Button android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="4dip" android:text="@string/set_appspot_base"
+            android:onClick="onModifyAppspotBase"></Button>
     </LinearLayout>
-    <ListView android:layout_height="wrap_content"
-        android:layout_weight="1" android:layout_width="fill_parent"
-        android:id="@+id/android:list" android:paddingLeft="8dip"
-        android:paddingRight="4dip"></ListView>
-    <LinearLayout android:background="@drawable/android:bottom_bar"
-        android:layout_width="fill_parent" android:layout_height="wrap_content"
-        android:gravity="center">
-        <Button android:layout_height="wrap_content"
-            android:text="@string/connect" android:layout_width="wrap_content"
-            android:id="@+id/connect_button" android:onClick="onConnect"
-            android:enabled="false" android:layout_weight="1" android:padding="4dip"></Button>
+    <LinearLayout android:layout_width="fill_parent"
+        android:id="@+id/account_panel" android:layout_height="wrap_content"
+        android:orientation="vertical" android:layout_weight="1">
+        <TextView android:layout_width="fill_parent"
+            android:id="@+id/textView1" android:text="@string/select_an_account"
+            android:layout_height="wrap_content" android:paddingLeft="4dip" android:paddingTop="12dip"></TextView>
+        <ListView android:layout_width="fill_parent"
+            android:paddingRight="4dip" android:id="@+id/android:list"
+            android:paddingLeft="8dip" android:layout_height="wrap_content"
+            android:layout_weight="1"></ListView>
+    </LinearLayout>
+    <LinearLayout android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true" android:orientation="horizontal"
+        style="@android:style/ButtonBar" android:id="@+id/action_panel">
+        <!-- Left spacer -->
+        <View android:layout_width="0dip" android:layout_height="fill_parent"
+            android:layout_weight="1" />
+        <Button android:layout_width="0dip"
+            android:layout_height="wrap_content" android:layout_weight="2"
+            android:text="@string/connect" android:onClick="onConnect" />
+        <!-- Right spacer -->
+        <View android:layout_width="0dip" android:layout_height="fill_parent"
+            android:layout_weight="1" />
     </LinearLayout>
 </LinearLayout>
 
